--- a/src/2017-04-29-c_c++-的编译和链接的问题.md
+++ b/src/2017-04-29-c_c++-的编译和链接的问题.md
@@ -1,10 +1,5 @@
----
-layout: post
-title:  "c/c++ 的编译和链接的问题"
-date:   2017/04/29 13:54:32
-categories:
-comments: true
----
+#  "c/c++ 的编译和链接的问题"
+
 
 ## 介绍
 
@@ -28,8 +23,8 @@ int main(int argc, char * argv[]) {
 
 我们看一下程序输出
 
-```
-c++ simple_main.cpp && ./a.out ; echo $?
+```console
+% c++ simple_main.cpp && ./a.out ; echo $?
 12
 ```
 
@@ -50,8 +45,8 @@ int main(int argc, char * argv[]) {
 注意到，我为了排除噪音，没有任何 `#include` 语句。
 
 
-```
-c++ -c -o simple_main.o simple_main.cpp
+```console
+% c++ -c -o simple_main.o simple_main.cpp
 ```
 
 命令成功执行，没有任何错误。`-c` 表示编译。如果不带这个选项， gcc 自动
@@ -61,18 +56,18 @@ c++ -c -o simple_main.o simple_main.cpp
 
 linux 下运行
 
-```
-nm -C simple_main.o
+```console
+% nm -C simple_main.o
 ```
 
 OSX 下运行
 
-```
-nm  simple_main.o
+```console
+% nm  simple_main.o
                  U __Z3fooi
 0000000000000000 T _main
 
-nm  simple_main.o | c++filt
+% nm  simple_main.o | c++filt
                  U foo(int)
 0000000000000000 T _main
 ```
@@ -91,9 +86,9 @@ int main(int argc, char * argv[]) {
 }
 ```
 
-```
-g++ -c -o simple_main.o simple_main.cpp
-nm simple_main.o
+```console
+% g++ -c -o simple_main.o simple_main.cpp
+% nm simple_main.o
                  U _foo
 0000000000000000 T _main
 ```
@@ -127,12 +122,12 @@ int foo(int input){
 
 我们分别编译一下。
 
-```
-c++ -c -o foo1.o foo1.cpp
-c++ -c -o foo2.o foo2.cpp
-nm foo1.o
+```console
+% c++ -c -o foo1.o foo1.cpp
+% c++ -c -o foo2.o foo2.cpp
+% nm foo1.o
 0000000000000000 T __Z3fooi
-nm foo2.o
+% nm foo2.o
 0000000000000000 T __Z3fooi
 ```
 
@@ -142,19 +137,19 @@ nm 的输出中， `T` 表示这个函数已经在这个目标文件中定义了
 
 如果我们链接第一个库
 
-```
-c++ -o a.out simple_main.o foo1.o && ./a.out ; echo $?
+```console
+% c++ -o a.out simple_main.o foo1.o && ./a.out ; echo $?
 
 12
 
-c++ -o a.out simple_main.o foo2.o && ./a.out ; echo $?
+% c++ -o a.out simple_main.o foo2.o && ./a.out ; echo $?
 
 24
 ```
 
 可以看到，只有连接的时候，才能决定我们调用哪一个函数。如果我们声明的是 `extern "C" int foo(int)` 的话，就会有连接错误。
 
-```
+```text
 Undefined symbols for architecture x86_64:
   "_foo", referenced from:
       _main in simple_main.o
@@ -162,19 +157,19 @@ Undefined symbols for architecture x86_64:
 
 解决这个错误的办法就是用  C 语言写一个 foo 函数。
 
-```
+```cpp
 // foo1.c
 int foo(int i) { return i*3; }
 ```
 
 
-```
-gcc -c -o fooc.o  foo1.c
-nm fooc.o
+```console
+% gcc -c -o fooc.o  foo1.c
+% nm fooc.o
 0000000000000000 T _foo
 
-c++  -o a.out fooc.o simple_main.o
-./a.out ; echo $?
+% c++  -o a.out fooc.o simple_main.o
+% ./a.out ; echo $?
 36
 ```
 
@@ -184,8 +179,8 @@ c++  -o a.out fooc.o simple_main.o
 
 如果我们两个目标文件都链接的话，会产生链接错误。
 
-```
-g++ -o a.out simple_main.o foo1.o foo2.o
+```console
+5 g++ -o a.out simple_main.o foo1.o foo2.o
 duplicate symbol __Z3fooi in:
     foo1.o
     foo2.o
@@ -199,15 +194,16 @@ clang: error: linker command failed with exit code 1 (use -v to see invocation)
 静态链接库很简单，就是一大堆目标文件的堆叠。
 
 创建链接库
-```
-ar r libfoo1.a foo1.o
-ar r libfoo2.a foo2.o
+
+```console
+% ar r libfoo1.a foo1.o
+% ar r libfoo2.a foo2.o
 ```
 
 连接静态链接库
 
-```
-c++ -L. -o a.out simple_main.o -lfoo1
+```console
+% c++ -L. -o a.out simple_main.o -lfoo1
 ```
 
 `-L.` 表明到哪里寻找 `libfoo.a` 。这里用当前目录。
@@ -217,12 +213,12 @@ c++ -L. -o a.out simple_main.o -lfoo1
 
 如果我们两个库都链接的话
 
-```
-g++ -o a.out simple_main.o -L. -lfoo1 -lfoo2
-./a.out; echo $?
+```console
+% g++ -o a.out simple_main.o -L. -lfoo1 -lfoo2
+% ./a.out; echo $?
 12
-g++ -o a.out simple_main.o -L. -lfoo2 -lfoo1
-./a.out; echo $?
+% g++ -o a.out simple_main.o -L. -lfoo2 -lfoo1
+% ./a.out; echo $?
 24
 ```
 
@@ -235,35 +231,35 @@ g++ -o a.out simple_main.o -L. -lfoo2 -lfoo1
 
 shared library 的使用，必须重新编译所有目标文件，让目标文件是位置无关的代码 PIC, Position Independent Code。
 
-```
-g++ -c -fPIC -o simple_main.o  simple_main.cpp
-g++ -c -fPIC -o foo1.o foo1.cpp
-g++ -c -fPIC -o foo2.o foo2.cpp
+```console
+% g++ -c -fPIC -o simple_main.o  simple_main.cpp
+% g++ -c -fPIC -o foo1.o foo1.cpp
+% g++ -c -fPIC -o foo2.o foo2.cpp
 ```
 
 生成动态链接库
 
 OSX 下
 
-```
-g++ -dynamiclib -o libfoo1.dylib foo1.o
-g++ -dynamiclib -o libfoo2.dylib foo2.o
+```console
+% g++ -dynamiclib -o libfoo1.dylib foo1.o
+% g++ -dynamiclib -o libfoo2.dylib foo2.o
 ```
 
 linux 下
 
-```
-g++ -o libfoo1.so -shared foo1.o
-g++ -o libfoo2.so -shared foo2.o
+```console
+% g++ -o libfoo1.so -shared foo1.o
+% g++ -o libfoo2.so -shared foo2.o
 ```
 
 链接
 
-```
-g++ -L. -o a.out simple_main.o -lfoo1
-./a.out ; echo $?
+```console
+% g++ -L. -o a.out simple_main.o -lfoo1
+% ./a.out ; echo $?
 12
-g++ -L. -o a.out simple_main.o -lfoo2
+% g++ -L. -o a.out simple_main.o -lfoo2
 ./a.out ; echo $?
 24
 ```
@@ -272,11 +268,11 @@ g++ -L. -o a.out simple_main.o -lfoo2
 
 同时链接两个
 
-```
-g++ -L. -o a.out simple_main.o -lfoo1 -lfoo2
+```console
+% g++ -L. -o a.out simple_main.o -lfoo1 -lfoo2
 ./a.out; echo $?
 12
-g++ -L. -o a.out simple_main.o -lfoo2 -lfoo1
+% g++ -L. -o a.out simple_main.o -lfoo2 -lfoo1
 ./a.out; echo $?
 24
 ```
