--- a/src/2017-04-06-ssh-的无密码登陆.md
+++ b/src/2017-04-06-ssh-的无密码登陆.md
@@ -1,10 +1,5 @@
----
-layout: post
-title:  "ssh 的无密码登陆"
-date:   2017/04/06 10:18:04
-categories:
-comments: true
-draft: false
+#  "ssh 的无密码登陆"
+
 ---
 
 
@@ -14,7 +9,7 @@ draft: false
 
 ## 生成钥匙和锁
 
-```shell-session
+```console
 % ls -l ~/.ssh
 total 0
 % ssh-keygen
@@ -50,7 +45,7 @@ total 16
 
 ## 给服务器上锁
 
-```shell-session
+```console
 % cat ~/.ssh/id_rsa.pub | ssh wangchunye@10.10.0.102 'chmod +w $HOME/.ssh/authorized_keys ; tee -a $HOME/.ssh/authorized_keys ; chmod 600 $HOME/.ssh/authorized_keys'
 wangchunye@10.10.0.102's password:
 chmod: cannot access '/home/wangchunye/.ssh/authorized_keys': No such file or directory
@@ -59,14 +54,14 @@ ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDIPBvlQ0sfpPFmSsgi2odj/dS9GlaiYCXZOKKm9R2t
 
 这个命令看起来有些复杂，有些机器上有  `ssh-copy-id` 可以完成一样的功能。
 
-```
+```console
 % ssh-copy-id wangchunye@10.10.0.102
 ```
 
 
 每次 `ssh-agent` 是本地的一个守护进程，他记录了本地的钥匙。`ssh-add` 用于添加删除这些钥匙
 
-```
+```console
 % ssh-agent
 ....
 
@@ -82,7 +77,8 @@ ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDIPBvlQ0sfpPFmSsgi2odj/dS9GlaiYCXZOKKm9R2t
 你可以把 `~/.ssh/id_rsa` 也就是你的钥匙，拷贝到主机 A 的 HOME 目录下，但是，这样明显有问题。主机 A 上的管理员账号 `root` 可以看你的钥匙，偷你的钥匙。
 
 有一个简单的办法
-```
+
+```console
 ssh -A hostA
 ```
 
@@ -100,7 +96,7 @@ echo Agent pid 95238;的连续穿梭的办法就有问题了。第一次在 host
 [stackoverflow](http://unix.stackexchange.com/questions/114558/how-can-i-forward-a-already-forwarded-ssh-key-into-tmux)
 
 
-```shell
+```sh
 #!/bin/sh
 SSHVARS="SSH_CLIENT SSH_TTY SSH_AUTH_SOCK SSH_CONNECTION DISPLAY"
 
@@ -113,13 +109,13 @@ done 1>$HOME/.ssh/latestagent
 `tmux attach` 之后，运行下面的命令就可以继续无密码穿梭了。
 
 
-```shell
+```sh
 source  ~/.ssh/saveagent
 ```
 
 这个命令很长，可以把这个放到 `~/.bashrc` 中
 
-```
+```sh
 alias s='source ~/.ssh/saveagent'
 ```
 
