update src/2015-07-08-C++11-的-feature,-unique_ptr.md etc

--- a/src/2015-07-08-C++11-的右值引用问题.md
+++ b/src/2015-07-08-C++11-的右值引用问题.md
@@ -1,10 +1,5 @@
----
-layout: post
-title:  "C++11 的右值引用问题"
-date:   2015/07/08 17:09:12
-categories:
-comments: true
----
+# C++11 的右值引用问题
+
 
 
 C++11 中增加了一个新的特性，叫做“右值引用” (rvalue reference)。
@@ -79,8 +74,8 @@ int main(int argc, char *argv[])
 程序输出结果
 
 
-```
-clang++ -ggdb -O0 -Wall -Werror -std=c++11 rvalue0.cpp && ./a.out
+```console
+% clang++ -ggdb -O0 -Wall -Werror -std=c++11 rvalue0.cpp && ./a.out
 void foo(int &&) 10
 void foo(int &) 100
 void foo(int &&) 1000
@@ -138,8 +133,8 @@ int main(int argc, char *argv[])
 结果如下
 
 
-```
-clang++ -ggdb -O0 -Wall -Werror -std=c++11 rvalue0.cpp && ./a.out
+```console
+% clang++ -ggdb -O0 -Wall -Werror -std=c++11 rvalue0.cpp && ./a.out
 A::A() 0x7ffff687a968
 A bar()
  0x7ffff687a968
@@ -151,7 +146,7 @@ A::~A() 0x7ffff687a968
 ## 左值引用是右值
 
 
-```
+```cpp
 void foo(A && x){
     ...
     x
@@ -306,7 +301,7 @@ int main(int argc, char *argv[])
 程序输出
 
 
-```
+```console
 A::A(int) 100 0x7fff48d239e8
 A::A(const A &) 100 0x7fff48d239e0 0x7fff48d239e8
 A::A(const A &) 100 0x7fff48d239a8 0x7fff48d239e0
@@ -491,8 +486,8 @@ int main(int argc, char *argv[])
 
 输出结果
 
-```
-lang++ -ggdb -O0 -Wall -Werror -std=c++11 forward3.cpp && ./a.out
+```console
+% lang++ -ggdb -O0 -Wall -Werror -std=c++11 forward3.cpp && ./a.out
 void foo(std::string &&) rvalue
 void foo(const std::string &) const lvalue
 void foo(string &) lvalue
@@ -566,8 +561,8 @@ int main(int argc, char *argv[])
 
 这个例子中
 
-```
-clang++ -ggdb -O0 -Wall -Werror -std=c++11 rvo.cpp && ./a.out
+```console
+% clang++ -ggdb -O0 -Wall -Werror -std=c++11 rvo.cpp && ./a.out
 A 100 0x7fff76a18a78
 ~A 100 0x7fff76a18a78
 ```
@@ -577,7 +572,7 @@ rvalue reference 看看。
 
 改成
 
-```
+```cpp
 A && x = f()
 ```
 
@@ -585,7 +580,7 @@ A && x = f()
 
 如果
 
-```
+```cpp
 return A(100) => return std::move(A(100))
 ```
 
