--- a/src/2017-03-26-c++-中-lambda-的类型和大小.md
+++ b/src/2017-03-26-c++-中-lambda-的类型和大小.md
@@ -1,21 +1,17 @@
----
-layout: post
-title:  "c++ 中 lambda 的类型和大小"
-date:   2017/03/26 14:52:11
-categories:
-comments: true
----
+# c++ 中 lambda 的类型和大小
 
 本文说明 c++11 lambda 生成一个匿名类，当没有 capture 到任何变量的时候，
 大小几乎为零。其实是 1 byte ，因为 c++ 不允许 0 字节的结构体。
 
 
-```{.cpp include=blog/2017-03-26/cpp_lambda_size_type.cpp}
+```cpp
+{{#include ./2017-03-26/cpp_lambda_size_type.cpp}}
 ```
 
 程序的输出结果
 
-```{.text include=blog/2017-03-26/cpp_lambda_size_type.out}
+```text
+{{#include ./2017-03-26/cpp_lambda_size_type.out}}
 ```
 
 这里可以看到，每一个 lambda 有自己的匿名类，`main::$_0` 。
@@ -28,7 +24,7 @@ comments: true
 
 会有报错
 
-```
+```text
 cpp_src/cpp_lambda_size_type.cpp:21:17: error: no matching constructor for initialization of 'decltype(x)' (aka '(lambda at cpp_src/cpp_lambda_size_type.cpp:16:14)')
     decltype(x) x1;
                 ^
@@ -41,7 +37,7 @@ cpp_src/cpp_lambda_size_type.cpp:16:14: note: candidate constructor (the implici
 
 这说明这个匿名类是没有默认构造函数的，但是可以创建引用
 
-```
+```cpp
     decltype(x) & x1 = x;
     x1();
     decltype(y) & y1 = y;
