--- a/src/2017-03-26-c++-模板的类型推导.md
+++ b/src/2017-03-26-c++-模板的类型推导.md
@@ -1,13 +1,9 @@
----
-layout: post
-title:  "c++ 模板的类型推导"
-date:   2017/03/26 09:24:25
-categories:
-comments: true
----
+# c++ 模板的类型推导
 
 
-```{.cpp include=blog/2017-03-26/template_type_deduction.cpp}
+
+```cpp
+{{#include ./2017-03-26/template_type_deduction.cpp}}
 ```
 
 
@@ -15,7 +11,8 @@ comments: true
 输出结果是
 
 
-```{.text include=blog/2017-03-26/template_type_deduction.out}
+```text
+{{#include ./2017-03-26/template_type_deduction.out}}
 ```
 
 这里面我们注意到
