update src/2017-03-26-c++-模板的类型推导.md etc

--- a/src/2017-03-13-TERMINAL-下的快捷操作.md
+++ b/src/2017-03-13-TERMINAL-下的快捷操作.md
@@ -1,14 +1,11 @@
----
-title: "TERMINAL 下的快捷操作"
----
+# TERMINAL 下的快捷操作
+
 
 # 改变 shell
 
 一般我们登陆的 shell 是 bash 。安装 oh-my-zsh 可以使用 zsh 作为默认的 shell 。 zsh 和 bash 类似，zsh 交互性更好一些。
 
-```
-todo
-```
+
 
 # readline 下的快捷键
 
