--- a/src/2017-03-10-过拟合和正则化.md
+++ b/src/2017-03-10-过拟合和正则化.md
@@ -1,6 +1,4 @@
----
-title: 过拟合和正则化
----
+# 过拟合和正则化
 
 本文参考 [http://neuralnetworksanddeeplearning.com/chap3.html]()
 
@@ -15,11 +13,11 @@ title: 过拟合和正则化
 
 假设我们有两种模型，一种是九次多项式模型
 
-$$ y = a_0 + a_1 x + a_2 x^2 + \cdots + a_9 x^9 $$
+\\( y = a_0 + a_1 x + a_2 x^2 + \cdots + a_9 x^9 \\)
 
 另一种是简单的线性模型，即，一次多项式模型
 
-$$ y = a_0 + a_1 x  $$
+\\( y = a_0 + a_1 x \\)
 
 我们得到下面两个结果。
 
@@ -69,42 +67,42 @@ $$ y = a_0 + a_1 x  $$
 
 正则化 (regulation) 是一种减少过拟合的方法。
 
-## $L^2$ 正则化，权值退化
+## \\(L^2\\) 正则化，权值退化
 
 我们盯着本质模型仔细看一会儿
 
-$$z = w \hat a + b$$
+\\[ z = w \hat a + b \\]
 
-下一级的输入是上一级输出的线性变换。假设我们的测量数据 $\hat a$ 中有我们不可知的误差，假设是加性的误差，那么 $\hat a = a + e$
+下一级的输入是上一级输出的线性变换。假设我们的测量数据 $\hat a$ 中有我们不可知的误差，假设是加性的误差，那么 \\( \hat a = a + e \\)
 
-$$z = w(a+e) + b$$
+\\[ z = w(a+e) + b \\]
 
-可以看到 $w$ 放大了这种误差，无论这个误差是加性的，还是其他。
+可以看到 \\(w\\) 放大了这种误差，无论这个误差是加性的，还是其他。
 
-如果我们假定 $w$ 很小，这样就减少了放大误差的可能性。
+如果我们假定 \\(w\\) 很小，这样就减少了放大误差的可能性。
 
-体现真相的 $a$ 会在很多训练数据中重复出现，所有的 $w$ 都很小，其实本质上不影响我们的模型训练，只不过是同比例放大缩小。
+体现真相的 \\(a\\) 会在很多训练数据中重复出现，所有的 \\(w\\) 都很小，其实本质上不影响我们的模型训练，只不过是同比例放大缩小。
 
-体现误差的 $e$ 对于每一个训练数据都不一样，某一个单一的训练样本的误差，不会对训练模型有很大影响。
+体现误差的 \\(e\\) 对于每一个训练数据都不一样，某一个单一的训练样本的误差，不会对训练模型有很大影响。
 
 注意这里面没有偏移量啥事，因为偏移量没有和测量误差没有关系。
 
-$L^2$ 正则化，在成本函数中增加一个新的项。
+\\(L^2\\) 正则化，在成本函数中增加一个新的项。
 
-$$ \frac{\lambda}{2n} \sum_w w^2$$
+\\[ \frac{\lambda}{2n} \sum_w w^2 \\]
 
-$\lambda$ 是正则化参数。
+\\(\lambda\\) 是正则化参数。
 
 这一项说明，权值越大，成本越大。可见，我们希望有绝对值很小的权值。除非我们有大量的样本 $n$ ，否则我们希望权值越小越好。
 
-可以看到，我们希望用很小的权值来最小化的成本函数的同时，$\lambda$ 用于寻找一种平衡，是减小权值更重要呢？还是最小化成本函数最重要？
+可以看到，我们希望用很小的权值来最小化的成本函数的同时，\\(\lambda\\) 用于寻找一种平衡，是减小权值更重要呢？还是最小化成本函数最重要？
 
 
 ## L1 正则化
 
-$$\frac{\lambda}{n} \sum_w |w|$$
+\\[ \frac{\lambda}{n} \sum_w |w| \\]
 
-L1 的正则化看上去和 L2 十分类似，设计初衷也是一样的，区别是 L1 和 L2 的权值退化程度不一样。 L1 的权值退化速度是一个常量，而且向 0 逼近。而 L2 的权值退化速度和 $w$ 成正比，$w$ 越大，退化速度越大。
+L1 的正则化看上去和 L2 十分类似，设计初衷也是一样的，区别是 L1 和 L2 的权值退化程度不一样。 L1 的权值退化速度是一个常量，而且向 0 逼近。而 L2 的权值退化速度和 \\(w\\) 成正比，\\(w\\) 越大，退化速度越大。
 
 这样 L1 的效果是，网络模型中会留下少数几个比较重要的权重。而其他不重要的权重，都趋近于 0 了。
 
