--- a/src/2017-04-30-Walter-E.-Brown-讲解-c++-中的-metaprograming.md
+++ b/src/2017-04-30-Walter-E.-Brown-讲解-c++-中的-metaprograming.md
@@ -52,7 +52,7 @@ struct is_same<T,T> : public true_type {
 
 
 ```text
-{{#include=blog/2017-04-30/is_same_0.out}}}
+{{#include ./2017-04-30/is_same_0.out}}}
 ```
 
 
@@ -487,5 +487,5 @@ struct is_copy_assignable<T, void_t<decltype( declval<T&>() = declval<T const&>(
 程序输出
 
 ```text
-{{#include .blog/2017-04-30/is_copy_assignable_1.out}}
+{{#include ./2017-04-30/is_copy_assignable_1.out}}
 ```
