--- a/src/2017-01-25-在-Java-中，我们尽量避免使用-null.md
+++ b/src/2017-01-25-在-Java-中，我们尽量避免使用-null.md
@@ -1,10 +1,5 @@
----
-layout: post
-title:  "在 Java 中，我们尽量避免使用 null"
-date:   2017/01/25 14:47:40
-categories:
-comments: true
----
+# 在 Java 中，我们尽量避免使用 null
+
 
 null 在 java 里面是一个十分特殊的值，他可以是任何类型。我们应该尽量避免使用这个值，主要原因是当你使用任何 method 的时候，都会导致 NPE (NullPointerException)。
 
@@ -71,7 +66,7 @@ if(flag) {
 
 Java 8 里面提供了 java.util.Optional 这个类，显式建模这个“失败”的概念。
 
-```
+```java
 Integer parseInterger(String x){
    return Integer.valueOf(x)
 }
