--- a/src/2015-07-08-C++-vector-调用多少次元素的构造函数.md
+++ b/src/2015-07-08-C++-vector-调用多少次元素的构造函数.md
@@ -1,15 +1,10 @@
----
-layout: post
-title:  "C++ vector 调用多少次元素的构造函数"
-date:   2015/07/08 16:57:40
-categories:
-comments: true
----
+# C++ vector 调用多少次元素的构造函数
+
 
 使用 `vector<A>` 到底要调多少次构造函数`A::A()`呢？
 
 
-{% highlight c++ %}
+```cpp
 #include <iostream>
 #include <vector>
 using namespace std;
@@ -60,12 +55,12 @@ int main(int argc, char *argv[])
     cout << "main get " << (void*) &x << endl;
     return 0;
 }
-{% endhighlight %}
+```
 
 运行结果 # 号后面的是我写的注释
 
 
-{% highlight bash %}
+```console
 clang++ -Wall -Werror -std=c++11 rvalue.cpp && ./a.out
 # 构造临时对象 A(i), i = 0 ，地址是栈(stack)上的地址
 A 0 0x7fff06edb8e0
@@ -111,19 +106,19 @@ main get 0x7fffe5026248
 ~A 0 0x2528010
 ~A 1 0x2528014
 ~A 2 0x2528018
-{% endhighlight %}
+```
 
 
 如何避免多余的调用构造函数呢？提前申请内存！
 
 
-{% highlight c++ %}
+```cpp
     vector<A> x;
     x.reserve(10);
-{% endhighlight %}
+```
 
 
-{% highlight c++ %}
+```cpp
 clang++ -Wall -Werror -std=c++11 vector_a.cpp && ./a.out
 A 0 0x7ffffbf11a30
 A 0 0x1044010 0x7ffffbf11a30
@@ -139,7 +134,7 @@ main get 0x7ffffbf11a88
 ~A 0 0x1044010
 ~A 1 0x1044014
 ~A 2 0x1044018
-{% endhighlight %}
+```
 
 可以看到，内存被提前申请了，所以不会有多余的拷贝构造函数了。
 
