--- a/src/2015-07-08-折腾-FreeBSD.md
+++ b/src/2015-07-08-折腾-FreeBSD.md
@@ -1,10 +1,5 @@
----
-layout: post
-title:  "折腾 FreeBSD"
-date:   2015/07/08 08:56:29
-categories:
-comments: true
----
+# 折腾 FreeBSD
+
 
 据说不喜欢 Windows 的人使用 Linux， 而喜欢 Unix 的人使用 FreeBSD。我没
 有啥偏见，就是好奇，试着玩一玩 FreeBSD。
@@ -18,33 +13,33 @@ comments: true
 
 ## 如何设置主机名称
 
-```
+```text
 sysrc hostname="mybsd"
 ```
 
 ## 打开网卡
 
-```
+```text
 ifconfig em0 up
 dhclient em0
 ```
 
 ## 如何安装软件
 
-```
+```text
 pkg install vim
 ```
 
 pkg 安装的时候出现 "operation timedout"， 因为我的网络连接太慢了，我看
 到 man fetch 里面提到，可以用环境变量调整这个超时时间。
 
-```
+```console
 setenv HTTP_TIMEOUT 3000 # 我花了好一段时间找到窍门。
 ```
 
 ## 安装 guest addition
 
-```
+```console
 pkg install virtualbox-ose-additions-4.3.28
 sysrc vboxguest_enable=yes
 sysrc vboxservice_enable=yes
@@ -54,13 +49,13 @@ sysrc vboxservice_enable=yes
 
 ## 如何查看有 rc.conf 中所有的默认配置
 
-```
+```console
 sysrc -A
 ```
 
 ## 如何查找软件
 
-```
+```console
 pkg search gdm
 pkg search --description 'display manager'
 ```
@@ -72,11 +67,11 @@ pkg search --description 'display manager'
 
 ## 安装图形系统
 
-```
+```console
 pkg install xorg xfce4
 ```
 
-```
+```console
 pkg install gdm xorg xfce4
 sysrc gdm_enable=YES
 sysrc gnome_enable=YES
@@ -86,7 +81,7 @@ sysrc dbus_enable="YES"
 
 修改 /etc/fstab
 
-```
+```console
 proc /proc procfs rw 0 0
 ```
 
@@ -95,7 +90,7 @@ proc /proc procfs rw 0 0
 /var/log/gdm/:0-greater.log ，提示找不到 gnome-shell ，于是安装
 gnome-shell ，其实我不太喜欢这个 gnome-shell ，被迫安装之。
 
-```
+```console
 pkg install gnome-shell
 ```
 
@@ -105,7 +100,7 @@ gdm 太臃肿了。放弃了。
 
 换 slim
 
-```
+```console
 pkg install slim
 sysrc slim_enable=YES
 ```
@@ -113,7 +108,7 @@ sysrc slim_enable=YES
 重启，一切正常，可是登陆以后，屏幕一闪就没有了。这个很明显是 xinitrc
 没有配置。
 
-```
+```console
 echo "exec /usr/local/bin/xfce4-session" > ~/.xinitrc
 chmod +x ~/.xinitrc
 
@@ -124,7 +119,7 @@ chmod +x ~/.xinitrc
 
 ## 安装 ssh
 
-```
+```console
 pkg install openssh-portable
 sysrc sshd_enable=YES
 service sshd start
@@ -132,7 +127,7 @@ service sshd start
 
 ## 安装常用软件
 
-```
+```console
 pkg install gdm xfce4 emacs24 vim gcc git subversion
 ```
 
