--- a/src/2015-07-08-编程风格：-C++-类的结构.md
+++ b/src/2015-07-08-编程风格：-C++-类的结构.md
@@ -1,14 +1,9 @@
----
-layout: post
-title:  "编程风格： C++ 类的结构"
-date:   2015/07/08 09:05:31
-categories:
-comments: true
----
+# 编程风格： C++ 类的结构
+
 
 如果一个类比较复杂，我会按照下面的顺序写一个类。
 
-{% highlight c++ %}
+```cpp
 class A : public interface{
 public: // 类静态函数
      static class_method1() ; //
@@ -35,7 +30,7 @@ private:
 
 // 尽量不要使用，protected
 // 尽量不要使用超过三层以上的继承关系。
-{% endhighlight %}
+```
 
 ## 详细展开讨论
 
@@ -43,7 +38,7 @@ private:
 
 这个不属于类对象，通常是一些构造对象用的函数。
 
-{% highlight c++ %}
+```cpp
 class A_interface {
 public:
      static A * create();
@@ -51,7 +46,7 @@ public:
      virtual void interface1() = 0;
      virtual void interface2() = 0;
 };
-{% endhighlight %}
+```
 
 这是一个比较好的父类结构
 
@@ -61,11 +56,11 @@ public:
  - 只有一个 类方法 `Create()`
  - 从用户的角度上看，这个结构一目了然，调用
 
-{% highlight c++ %}
+```cpp
 A_interface * obj= A_interface::Create();
 obj->interface1();
 obj->interface2();
-{% endhighlight %}
+```
 
 ### 构造函数
 
@@ -99,7 +94,7 @@ obj->interface2();
 
 ### 首先创建一个 cmd.h
 
-{% highlight c++ %}
+```cpp
 #pragma once
 #include <string>
 // using namespace std
@@ -111,16 +106,16 @@ public:
 public:
     virtual int execute(int argc, char * argv[]) = 0;
 };
-{% endhighlight %}
+```
 
  - 用 `#progam once` 代替
 
-   {% highlight c++ %}
+   ```cpp
    #ifndef CMD_H
    #define CMD_H
    ....
    #endif
-   {% endhighlight %}
+   ```
 
    `#program once` 的好处是，短小。不用三行
 
@@ -151,7 +146,7 @@ public:
 
 ## 创建 main.cpp
 
-{% highlight c++ %}
+```cpp
 #include "cmd.h"
 using namespace std;
 int main(int argc, char *argv[])
@@ -161,13 +156,13 @@ int main(int argc, char *argv[])
     delete cmd;
     return ret;
 }
-{% endhighlight %}
+```
 
 从用户的角度上看 `cmd_c` 这个类，十分清爽。
 
 ## 创建 `cmd_args.h` ，第一个 `cmd_c` 的实现
 
-{% highlight c++ %}
+```cpp
 #pragma once
 #include "cmd.h"
 class cmd_args_c: public cmd_c {
@@ -181,14 +176,14 @@ private:
 private:
     virtual int execute(int argc, char * argv[]);
 };
-{% endhighlight %}
+```
 
  - 禁止了构造函数，拷贝构造函数，赋值操作符重载。
  - 也禁止了析构函数。因为父类的析构函数是虚函数，所以子类可以重载虚函数。
 
 ### 创建 `cmd_args.cpp`
 
-{% highlight c++ %}
+```cpp
 #include <iostream>
 using namespace std;
 #include "cmd.h"
@@ -218,11 +213,11 @@ int cmd_args_c::execute(int argc, char* argv[])
     return 0;
 
 }
-{% endhighlight %}
+```
 
 ### 创建 cmd.cpp，定义如何创建具体对象
 
-{% highlight c++ %}
+```cpp
 #include <cassert>
 #include "cmd.h"
 #include "cmd_args.h"
@@ -251,7 +246,7 @@ cmd_c * cmd_c::create(string cmd)
     return ret;
 
 }
-{% endhighlight %}
+```
 
 在 cmd.cpp 里面可以放心大胆的使用 using namespace std ，爱怎么弄怎么弄。
 没有名字污染的问题。
@@ -259,9 +254,9 @@ cmd_c * cmd_c::create(string cmd)
 在 `cmd.cpp` 里面要定义 `~cmd()` 否则链接的时候会报错
 
 
-{% highlight  bash%}
+```console
 cmd_args.cpp:(.text+0xb1): undefined reference to `cmd_c::~cmd_c()'
-{% endhighlight %}
+```
 
 定义 `command_table` ，这里使用了匿名结构体。因为只有这一个全局变量，
 可以避免名字空间污染，也可以避免为了起名浪费脑细胞。
@@ -271,12 +266,12 @@ cmd_args.cpp:(.text+0xb1): undefined reference to `cmd_c::~cmd_c()'
 为了遵循这个原则，是不是可以把 `command_table` 放在 `cmd_c::create` 的
 内部。
 
-{% highlight c++ %}
+```cpp
 cmd_c * cmd_c::create(string cmd)
 {
    static .... command_table ...;
 }
-{% endhighlight %}
+```
 
 这样违反了另一个原则，“分离数据和实现” 。这里是用来注册子类的构造方法
 的地方， `cmd_c` 的子类实现者要很容易找到在哪里注册一个新的子类实现，
@@ -290,13 +285,13 @@ cmd_c * cmd_c::create(string cmd)
 因为有多个 cpp 的文件，写一个简单的 Makefile
 
 
-{% highlight  makefile %}
+```makefile
 CXXFLAGS += -Wall -Werror -Wextra
 all: busybox
 
 busybox: main.o cmd.o cmd_args.o
 	$(CXX) -o $@ $+
-{% endhighlight %}
+```
 
 注意： `-Wall -Werror -Wextra` 是一个很好的习惯，尽量尽量好准守。我用
 了两个“尽量”。项目初期就加上这个，其实影响很小，到了项目后期，如果除掉
@@ -305,18 +300,18 @@ busybox: main.o cmd.o cmd_args.o
 
 ### 使用 make
 
-{% highlight  bash %}
-make
-clang++ -Wall -Werror -Wextra   -c -o main.o main.cpp
-clang++ -Wall -Werror -Wextra   -c -o cmd.o cmd.cpp
-clang++ -Wall -Werror -Wextra   -c -o cmd_args.o cmd_args.cpp
-clang++ -o busybox main.o cmd.o cmd_args.o
-{% endhighlight %}
+```console
+% make
+% clang++ -Wall -Werror -Wextra   -c -o main.o main.cpp
+% clang++ -Wall -Werror -Wextra   -c -o cmd.o cmd.cpp
+% clang++ -Wall -Werror -Wextra   -c -o cmd_args.o cmd_args.cpp
+% clang++ -o busybox main.o cmd.o cmd_args.o
+```
 
 运行
 
 
-{% highlight  bash %}
+```console
 bash$ ln -s ./busybox args
 bash$ ./args
 argv[0]:./args
@@ -324,7 +319,7 @@ bash$ ./args show me
 argv[0]:./args
 argv[1]:show
 argv[2]:me
-{% endhighlight %}
+```
 
 创建一个符号连接到 busybox 上，这个是 Linux 下的通用做法。保证
 "./args" 是第一个参数 `argv[0]`。
