--- a/src/2015-07-10-ZFS-转移数据.md
+++ b/src/2015-07-10-ZFS-转移数据.md
@@ -1,10 +1,5 @@
----
-layout: post
-title:  "ZFS 转移数据"
-date:   2015/07/10 16:40:38
-categories:
-comments: true
----
+# ZFS 转移数据
+
 
 我以前有一个旧的磁盘阵列，用 zfs 系统，现在想把数据导入到新的系统里面。
 
@@ -17,13 +12,13 @@ http://everycity.co.uk/alasdair/2010/07/using-mbuffer-to-speed-up-slow-zfs-send-
 在目标机器上运行服务器。
 
 
-```
+```console
 [root@freenas2] ~# mbuffer -s 128k -m 3G -4 -I 9090 | zfs recv -v -F mypool/export
 ```
 
 在源机器上运行客户端。
 
-```
+```console
 zfs snapshot -R create balbagvaba
 c1@file1:~$ sudo zfs send -R mypool/export@20150708 | mbuffer -s 128k -m 1G -O 192.168.0.114:9090
 
@@ -31,7 +26,7 @@ c1@file1:~$ sudo zfs send -R mypool/export@20150708 | mbuffer -s 128k -m 1G -O 1
 
 查看系统瓶颈
 
-```
+```console
 top -SH
 gstat
 ```
@@ -41,7 +36,7 @@ NFS 共享
 freeNAS 没有使用 ZFS 的 NFS 共享，而是 freebsd 自带的 NFS 共享。修改
 `/etc/exports` ，或者用图形界面。我的列表比较长，很容易用命令处理。
 
-```
+```console
 /mnt/mypool/export/prod
 /mnt/mypool/export/cluster-root -maproot=root
 ```
@@ -50,12 +45,12 @@ freeNAS 没有使用 ZFS 的 NFS 共享，而是 freebsd 自带的 NFS 共享。
 
 修改完了之后，运行
 
-```
+```console
 service mountd reload
 ```
 
 查看是否生效
 
-```
+```console
 showmount -e localhost
 ```
