--- a/src/2016-12-25-从零开始构造一个微服务.md
+++ b/src/2016-12-25-从零开始构造一个微服务.md
@@ -1,16 +1,11 @@
----
-layout: post
-title:  "从零开始构造一个微服务"
-date:   2016/12/25 14:06:51
-categories:
-comments: true
----
+# 从零开始构造一个微服务
+
 创建一个 spring boot 的程序
 --------------------------
 
 目录结构如下
 
-```
+```text
 wangchunye@wangchunye hello-micro-service$ tree
 .
 ├── pom.xml
