--- a/src/2017-01-07-JAVA8-中的高阶函数.md
+++ b/src/2017-01-07-JAVA8-中的高阶函数.md
@@ -1,10 +1,5 @@
----
-layout: post
-title:  "JAVA8 中的高阶函数"
-date:   2017/01/07 20:18:41
-categories:
-comments: true
----
+# JAVA8 中的高阶函数
+
 [A Few Hidden Treasures in Java 8 on YouTube
 ](https://www.youtube.com/watch?v=GphO9fWhlAg&t=2827s) 是一个很有意思的视频。
 
@@ -46,7 +41,7 @@ public class SortPersonTest {
 
 程序输出
 
-```
+```text
 Person(name=Jill, gender=FEMALE, age=12)
 Person(name=Sara, gender=FEMALE, age=20)
 Person(name=Sara, gender=FEMALE, age=22)
