--- a/src/2017-01-07-rabbitmq-中的概念.md
+++ b/src/2017-01-07-rabbitmq-中的概念.md
@@ -1,10 +1,5 @@
----
-layout: post
-title:  "rabbitmq 中的概念"
-date:   2017/01/07 20:14:39
-categories:
-comments: true
----
+# rabbitmq 中的概念
+
 
 本文主要是阅读 https://www.rabbitmq.com/tutorials/amqp-concepts.html 之后的笔记
 
