--- a/src/2017-01-07-rxjava-如何和传统回调函数结合.md
+++ b/src/2017-01-07-rxjava-如何和传统回调函数结合.md
@@ -1,10 +1,5 @@
----
-layout: post
-title:  "rxjava 如何和传统回调函数结合"
-date:   2017/01/07 20:17:25
-categories:
-comments: true
----
+# rxjava 如何和传统回调函数结合
+
 
 今天看到一个 Observable.fromEmitter 的函数，这里是这个函数的 javadoc
 
@@ -85,7 +80,7 @@ public class FromEmitterTest {
 ```
 这个例子的执行结果是
 
-```
+```log
 02:12:24.244 [main] INFO org.wcy123.rxjava1.FromEmitterTest - 提前打印这里, subscribe 没有阻塞住
 02:12:24.244 [pool-1-thread-1] INFO org.wcy123.rxjava1.FromEmitterTest - item thread + 0 i = 0
 02:12:24.250 [main] INFO org.wcy123.rxjava1.FromEmitterTest - 开始等待解锁
