--- a/src/2017-01-07-rxjava2-有什么新东西.md
+++ b/src/2017-01-07-rxjava2-有什么新东西.md
@@ -1,10 +1,5 @@
----
-layout: post
-title:  "rxjava2 有什么新东西"
-date:   2017/01/07 20:18:14
-categories:
-comments: true
----
+# rxjava2 有什么新东西
+
 昨天看过Jakes Whaton 的一个视频 ，今天记录一下我脑子里还记得东西。也许不全，以后在仔细补全吧。
 
 backpressure 怎么翻译，我翻译成流控吧。
