--- a/src/2017-01-07-关于协议设计语言.md
+++ b/src/2017-01-07-关于协议设计语言.md
@@ -1,10 +1,5 @@
----
-layout: post
-title:  "关于协议设计语言"
-date:   2017/01/07 20:19:18
-categories:
-comments: true
----
+# 关于协议设计语言
+
 通信系统中存在无数个协议，协议就是把事先规定好的一些规则，发送端按照规则发送，接收端按照规则理解。这个规则，某种程度上来说，就是一门语言。接收端和发送端都符合一个协议，就像他们都是讲同一门语言。很难想象，HTTP 的客户端可以连接 IMAP 服务器。
 
 相比编程语言，协议语言更加简单，注重如何抽象的描述信息，而不在话信息如何在内存中存储和表示。这种描述，通常叫做抽象语法表示(ASN1)。互联网中也出现了一些其他的类似的定义，例如 Protobuf 。
