--- a/src/2017-01-07-简单的多线程并不能提高效率.md
+++ b/src/2017-01-07-简单的多线程并不能提高效率.md
@@ -1,10 +1,5 @@
----
-layout: post
-title:  "简单的多线程并不能提高效率"
-date:   2017/01/07 20:19:02
-categories:
-comments: true
----
+# 简单的多线程并不能提高效率
+
 下面是一个最简单的多线程处理程序。这种多线程处理并不能提高效率
 
 ```java
