--- a/src/2017-01-07-编写单链表反转的程序.md
+++ b/src/2017-01-07-编写单链表反转的程序.md
@@ -1,10 +1,5 @@
----
-layout: post
-title:  "编写单链表反转的程序"
-date:   2017/01/07 20:39:26
-categories:
-comments: true
----
+# 编写单链表反转的程序
+
 
 首先，我们定义一个链表。
 
@@ -73,7 +68,7 @@ int main(int argc, char *argv[])
 
 程序输出
 
-```
+```text
 before reverse:(3,2,1)
 after reverse:(1,2,3)
 before reverse:()
@@ -171,7 +166,7 @@ after reverse:()
 
 输出结果
 
-```
+```text
 before reverse: (3,2,1)
 after reverse: (1,2,3)
 ```
@@ -207,6 +202,6 @@ after reverse: (1,2,3)
 
 输出结果
 
-```
+```text
 map: (103,102,101)
 ```
