--- a/src/2017-01-07-阅读-rxjava-源代码.md
+++ b/src/2017-01-07-阅读-rxjava-源代码.md
@@ -1,10 +1,5 @@
----
-layout: post
-title:  "阅读 rxjava 源代码"
-date:   2017/01/07 20:17:08
-categories:
-comments: true
----
+# 阅读 rxjava 源代码
+
 # 介绍
 **事件驱动**和**异步调用**是两种慢慢被大家接收的编程范式了。rxjava 库利用**观察者**模式，把**事件驱动**和**异步调用**程序组合在一起。
 
