--- a/src/2017-01-08-二分法查找.md
+++ b/src/2017-01-08-二分法查找.md
@@ -1,10 +1,5 @@
----
-layout: post
-title:  "二分法查找"
-date:   2017/01/08 11:51:57
-categories:
-comments: true
----
+# 二分法查找
+
 
 写一个二分法查找的程序，也没有那么容易。我试验了一下，写了一个。
 
@@ -52,7 +47,7 @@ int main(int argc, char *argv[])
 
 程序输出结果如下:
 
-```
+```text
 4 not found
 found 5 at a[0]
 found 6 at a[1]
@@ -167,4 +162,4 @@ goto TAIL_CALL;
 1. if 尽量带 else
 2. if elseif else 风格的代码，最好覆盖所有的可能性。
 
-讨论详见 [http://wcy123.github.io/2015/07/08/C-C-if-else]()
+讨论详见 [2015-07-08-C_C++-编程风格:-if-else.html]()
