--- a/src/2017-01-08-最重要的设计原则.md
+++ b/src/2017-01-08-最重要的设计原则.md
@@ -1,10 +1,5 @@
----
-layout: post
-title:  "最重要的设计原则"
-date:   2017/01/08 00:43:16
-categories:
-comments: true
----
+# 最重要的设计原则
+
 
 https://www.youtube.com/watch?v=5tg1ONG18H8
 
