--- a/src/2016-08-27-开发自己的语言.md
+++ b/src/2016-08-27-开发自己的语言.md
@@ -1,10 +1,5 @@
----
-layout: post
-title: 开发自己的语言
-date: '2016/08/27 16:13:26'
-categories: null
-comments: true
----
+# 发自己的语
+
 
 
 <!-- toc -->
@@ -44,7 +39,7 @@ comments: true
 
 原始类型是一个 `s-exp` ，求值就是 `s-exp` 本身。包括：整数，浮点数，字符串。例如
 
-```
+```scheme
 1  => 1
 1.2 => 1.2
 "abc" => "abc"
@@ -72,7 +67,7 @@ comments: true
 语言参考 <http://www.scheme.com/tspl4/>
 
 
-```
+```eval
 Chez Scheme Version 9.4
 Copyright 1984-2016 Cisco Systems, Inc.
 
@@ -117,7 +112,7 @@ Type (debug) to enter the debugger.
 这个规则也是一个终止条件。如果一个 `s-exp` 是一个 `list` ，第一个元素
 是 `quote`，第二个元素任何一个 `s-exp` X，那么求值结果就是 X 。
 
-```
+```scheme
 (quote 1) => 1
 (quote 1.2) => 1.2
 (quote "abc") => "abc
@@ -152,7 +147,7 @@ Type (debug) to enter the debugger.
 
 看看运行结果
 
-```
+```eval
 > (load "eval1.scm")
 > (eval '(quote 1) '())
 1
@@ -267,7 +262,7 @@ quote
 我们看看程序的执行效果
 
 
-```
+```eval
 > (eval '(if (quote true) 1 2) '())
 1
 > (eval '(if (quote false) 1 2) '())
@@ -319,13 +314,13 @@ quote
 
 这个功能是一个很方便的功能。如果 `<s-exp>` 是下面的形式
 
-```
+```scheme
 (begin <E1> <E2> .... <En>)
 ```
 
 那么我们对 E1 , E2 ，.... , En 分别求值，整个表达式的值就是 En 的求值结果。
 
-```
+```scheme
 (define (eval exp env)
   (cond (.......
         ((begin? exp)
@@ -335,7 +330,7 @@ quote
 
 看看关键函数 `eval-sequence` 的实现
 
-```
+```scheme
 (define (eval-sequence exps env)
   (cond ((last-exp? exps) (eval (first-exp exps) env))
         (else (eval (first-exp exps) env)
@@ -349,7 +344,7 @@ quote
 
 看看其他几个辅助函数的实现
 
-```
+```scheme
 (define (begin? exp) (tagged-list? exp 'begin))
 (define (begin-actions exp) (cdr exp))
 (define (last-exp? seq) (null? (cdr seq)))
@@ -359,7 +354,7 @@ quote
 
 看看程序的执行效果
 
-```
+```scheme
 > (load "eval3.scm")
 > (eval '(begin 1 2) '())
 ```
@@ -421,7 +416,7 @@ quote
 
 什么是函数表达式，其实就是著名的 lambda 表达式。lambda 表达式格式如下
 
-```
+```scheme
 (lambda <PARAM-LIST> <FUN-BODY>)
 ```
 
@@ -446,7 +441,7 @@ quote
 
 看看执行效果
 
-```
+```scheme
 > (make-procedure '(a b) 'a '())
 (procedure (a b) a ())
 > (set! p1 (make-procedure '(a b) 'a '()))
@@ -486,7 +481,7 @@ a
 
 看看执行效果
 
-```
+```scheme
 > (lambda? '(lambda 1))
 #f
 > (lambda-parameters '(lambda (a b) (+ a b)))
@@ -572,7 +567,7 @@ a
 
 刚刚我们定义了一个函数，但是并没有什么用处，我们看看什么是函数调用 (apply)。
 
-```
+```scheme
 (<L> <A1> <A2> ... <An>)
 ```
 
@@ -629,7 +624,7 @@ a
 
 看看运行效果
 
-```
+```scheme
 > (set! f1 (make-frame '(a b c) '(1 2 3)))
 > (frame-variables f1)
 (a b c)
@@ -653,7 +648,7 @@ a
 
 看看执行效果
 
-```
+```scheme
 > (set! e1 (extend-environment '(a b c) '(1 2 3) the-empty-environment)))
 > e1
 (((a b c) 1 2 3))
@@ -687,7 +682,7 @@ a
 
 我们看看执行效果
 
-```
+```scheme
 > (lookup-variable-value 'x e2)
 10
 > (lookup-variable-value 'y e2)
@@ -713,7 +708,7 @@ Type (debug) to enter the debugger.
 
 看看执行效果
 
-```
+```scheme
 > (eval 'a e1)
 1
 > (eval 'b e1)
@@ -771,7 +766,7 @@ Type (debug) to enter the debugger.
 
 看看执行效果
 
-```
+```scheme
 > (eval '((lambda (a b) a) 1 2) '())
 1
 > (eval '((lambda (a b) b) 1 2) '())
@@ -928,7 +923,7 @@ primitive 函数有一个属性，就是底层的函数实现。
 
 我们预先定义下面这些内置函数
 
-```
+```scheme
 (define primitive-procedures
   (list (list 'car car)
         (list 'cdr cdr)
@@ -940,7 +935,7 @@ primitive 函数有一个属性，就是底层的函数实现。
 
 我们初始化语言的初始环境
 
-```
+```scheme
 (define (primitive-procedure-names)
   (map car
        primitive-procedures))
@@ -960,7 +955,7 @@ primitive 函数有一个属性，就是底层的函数实现。
 看看执行效果
 
 
-```
+```scheme
 > (load "eval6.scm")
 > the-global-environment
 (((car cdr cons null?)
@@ -1000,7 +995,7 @@ primitive 函数有一个属性，就是底层的函数实现。
 
 看看执行效果
 
-```
+```scheme
 > (eval 'car the-global-environment)
 (primitive #<procedure car>)
 > (apply-primitive-procedure (eval 'car the-global-environment) '((1 2)))
@@ -1016,7 +1011,7 @@ hello world
 防止名字冲突。并且用 `apply-primitive-procedure` 强调我们调用的是宿主
 语言的 apply 函数。
 
-```
+```scheme
 (define apply-in-underlying-scheme (top-level-value 'apply (scheme-environment)))
 ```
 
@@ -1190,7 +1185,7 @@ hello world
 
 看看效果
 
-```
+```scheme
 > (eval '(begin (define a 10) a) the-global-environment)
 10
 > (eval '(begin (define a 10) (display a)) the-global-environment)
