--- a/src/2017-01-14-Java-8-函数式编程例子.md
+++ b/src/2017-01-14-Java-8-函数式编程例子.md
@@ -1,17 +1,12 @@
----
-layout: post
-title:  "Java 8 函数式编程例子"
-date:   2017/01/14 10:31:51
-categories:
-comments: true
----
+# Java 8 函数式编程例子
+
 
 
 Java8 提供了函数式编程的能力，[这里介绍过 java8 的高阶函数][HOF]，这篇文章通过一个实际的例子，展示函数式编程的思维。
 
 需求是这样的，有一个 log 文件，文件格式类似下面
 
-```
+```text
 2017/01/14 10:39:05 user "Peter" login
 2017/01/14 11:49:05 user "John" login
 2017/01/14 12:39:05 user "Peter" login
@@ -28,7 +23,7 @@ Java8 提供了函数式编程的能力，[这里介绍过 java8 的高阶函数
 
 类似
 
-```
+```ext
 ExLogAnalyzerTest.LogEntry(timestamp=2017-01-14T04:45:55Z, user=Peter, count=5)
 ExLogAnalyzerTest.LogEntry(timestamp=2017-01-14T04:42:25Z, user=Tom, count=2)
 ExLogAnalyzerTest.LogEntry(timestamp=2017-01-14T04:41:18Z, user=Emma, count=2)
